src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Subscription_Term_Type__c</fullName>
        <inlineHelpText>Subscription Term Type determines whether its Termed or Evergreen. If Evergreen is chosen, then Initial Term and Renewal Term will be set to 0 and Auto Renew will be unchecked. Also, blank value means Quote is created with Termed Subscription Type.</inlineHelpText>
        <label>Subscription Term Type</label>
        <picklist>
            <picklistValues>
                <fullName>Termed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__TCBTax__c</fullName>
        <description>Tax on Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Tax on Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <label>TCV (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__TCVForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptEffectiveDate__c</fullName>
        <label>Tax Exempt Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptExpirationDate__c</fullName>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Tax__c</fullName>
        <description>The amount of Tax for the Quote.</description>
        <inlineHelpText>The amount of Tax for the Quote.</inlineHelpText>
        <label>Tax(Deprecated)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Terms__c</fullName>
        <description>Special Terms and Notes for the Quote.</description>
        <inlineHelpText>Special Terms and Notes for the Quote.</inlineHelpText>
        <label>Special Terms and Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total(Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ValidUntil__c</fullName>
        <description>The Date that the Quote is Valid until.</description>
        <inlineHelpText>The Date that the Quote is Valid until.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraAccountID__c</fullName>
        <label>Zuora Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraEntityId__c</fullName>
        <label>Zuora Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraInvoiceNumber__c</fullName>
        <label>Zuora Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountId__c</fullName>
        <label>Zuora Parent Billing Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountName__c</fullName>
        <label>Zuora Parent Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentID__c</fullName>
        <label>Zuora Payment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentNumber__c</fullName>
        <label>Zuora Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Subscription ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionNumber__c</fullName>
        <label>Zuora Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Account_Number__c</fullName>
        <label>Zuora Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All_Quotes111</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotesttttt</label>
    </listViews>
    <listViews>
        <fullName>All_Quotesa</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesRepLookup__c</field>
            <operation>contains</operation>
            <value>Local AE</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/28/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/29/2015 12:00 AM</value>
        </filters>
        <label>new record by a</label>
    </listViews>
    <listViews>
        <fullName>New_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Quotes</label>
    </listViews>
    <listViews>
        <fullName>zqu__All_Quotes</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>Product_Line__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__InvoiceTargetDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>zqu__Amendment_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Amend Subscription</value>
        </filters>
        <label>Amendment Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Cancellation_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__CancellationDate__c</columns>
        <columns>zqu__CancellationEffectiveDate__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Cancel Subscription</value>
        </filters>
        <label>Cancellation Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__New_Subscription_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__PaymentTerm__c</columns>
        <columns>zqu__PaymentMethod__c</columns>
        <columns>zqu__Previewed_MRR__c</columns>
        <columns>zqu__Previewed_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>New Subscription</value>
        </filters>
        <label>New Subscription Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Renewal_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>zqu__BillToContact__c</columns>
        <columns>zqu__SoldToContact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renew Subscription</value>
        </filters>
        <label>Renewal Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>zqu__Amendment</fullName>
        <active>true</active>
        <description>Record Type for Amendment Quote, assigned with Amendment Page Layout</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Amendment_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for amend Subscription Quote after sent to Zuora, assigned with Amendment Read Only Page Layout</description>
        <label>Amendment ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <description>Record Type for Quote Default, assigned with Quote Default Page Layout</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for New Subscription Quote after sent to Zuora, assigned with Quote Read Only Page Layout</description>
        <label>ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal</fullName>
        <active>true</active>
        <description>Record Type for Quote Renewal, assigned with Renewal Page Layout</description>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for renew subscription Quote after sent to Zuora, assigned with Renewal Read Only Page Layout</description>
        <label>Renewal ReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Auto_Renew_Rule</fullName>
        <active>true</active>
        <description>If a Quote is less than 12 months the auto renewal flag is NOT allowed to be set to True</description>
        <errorConditionFormula>IF(AND(zqu__AutoRenew__c = true, zqu__InitialTerm__c &lt; 12), true, false)</errorConditionFormula>
        <errorMessage>A Subscription LESS than 12 months can not be set to auto renew. Please update the subscription term OR you can forward without setting the subscription to auto renew.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_not_Support_Month_PPS</fullName>
        <active>true</active>
        <description>Given a Local user is creating or editing a Transactions quote: 
the &apos;Preferred Payment Schedule&apos; is always set to &apos;Monthly&apos; regardless of Payment Method. 
the &apos;Preferred Payment Schedule&apos; cannot be set to a value other than &apos;Monthly&apos;.</description>
        <errorConditionFormula>AND( NOT (ISPICKVAL( Product_Line__c , &apos;Transactions&apos;)) , ISPICKVAL( Preferred_Payment_Schedule__c , &apos;Month&apos;), ISPICKVAL( zqu__PaymentMethod__c , &apos;Check&apos;) )</errorConditionFormula>
        <errorMessage>The Preferred Payment Schedule of &apos;Month&apos; is not a valid selection when the Payment Method is &apos;Check&apos;. Please change the value of Preferred Payment Schedule or Payment Method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Owner_Validation_Rule</fullName>
        <active>false</active>
        <description>CSP-2880 Make Invoice Owner field available to certain users</description>
        <errorConditionFormula>AND(      
	        $Profile.Name  != &apos;Local Core Finance - ARR&apos; , 
		$Profile.Name  != &apos;System Administrator&apos; ,
		$Profile.Name  != &apos;Service Accounts&apos; ,  
		$UserRole.Name != &apos;SOSS Managers&apos;, 
		$UserRole.Name != &apos;SOSS&apos;,  
		OR( 
			ISCHANGED(zqu__InvoiceOwnerName__c), 
			ISNEW()), 
		NOT(ISBLANK(zqu__InvoiceOwnerName__c))
		
               	
)</errorConditionFormula>
        <errorMessage>Please DO NOT fill in the Invoice Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_allow_a_quote_startdate_28th_to_31st</fullName>
        <active>true</active>
        <description>ES-8366</description>
        <errorConditionFormula>AND
(
$Profile.Name&lt;&gt;&apos;System Administrator&apos;,
zqu__Account__r.RecordType.Name == &apos;Local&apos;,
zqu__Opportunity__r.RecordType.Name == &apos;Local&apos;,
ISPICKVAL(zqu__SubscriptionType__c,&apos;New Subscription&apos;),
ISBLANK(zqu__ZuoraAccountID__c),
/*ISNEW(),*/
/*ISPICKVAL(zqu__Account__r.Account_Anniversary_Status__c,&apos;Prospect&apos;),*/
/*ISPICKVAL(Product_Line__c,&apos;Internet&apos;),*/
OR
  (
  DAY(zqu__TermStartDate__c) =28,
  DAY(zqu__TermStartDate__c) =29,
  DAY(zqu__TermStartDate__c) =30,
  DAY(zqu__TermStartDate__c) =31
  )
)</errorConditionFormula>
        <errorMessage>Not allow a new quote with term start date 28th-31st</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Allow_Credit_Card_for_Amnesty_Acct</fullName>
        <active>true</active>
        <description>CSP-3158</description>
        <errorConditionFormula>AND 
( 
zqu__Account__r.RecordType.Name == &apos;Local&apos;, 
zqu__Opportunity__r.RecordType.Name == &apos;Local&apos;,
NOT(ISPICKVAL(zqu__PaymentMethod__c, &apos;Credit Card&apos;)),
OR 
(ISPICKVAL(zqu__Account__r.Amnesty_Promotion__c,&apos;50% Amnesty Eligible&apos;),
 ISPICKVAL(zqu__Account__r.Amnesty_Promotion__c,&apos;100% Amnesty Eligible&apos;)
) 
)</errorConditionFormula>
        <errorMessage>You can only select Credit Card as the payment method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Amendment_Service_Activation</fullName>
        <active>true</active>
        <description>CSP-2594 - Users cannot create an amendment with a term start date that is before the Subscription Term Start Date</description>
        <errorConditionFormula>And(
ISPICKVAL(Product_Line__c,&apos;Internet&apos;),
RecordType.Name = &apos;Amendment&apos;,
NOT(ISBLANK(zqu__TermStartDate__c)),
NOT(ISBLANK(zqu__SubscriptionTermStartDate__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
zqu__TermStartDate__c &lt; zqu__SubscriptionTermStartDate__c
)</errorConditionFormula>
        <errorMessage>The new Term Start Date can&apos;t be earlier than the original Subscription Term Start Date in Amendment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotional_Quote_Validation_Rule</fullName>
        <active>true</active>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <errorConditionFormula>AND(
 Promotional_Quote__c,
 OR(
  ISPICKVAL(zqu__PaymentMethod__c,&apos;Check&apos;),
  ISPICKVAL(Preferred_Payment_Schedule__c,&apos;Semi-Annual&apos;),
  ISPICKVAL(Preferred_Payment_Schedule__c,&apos;Annual&apos;),
  NOT(ISPICKVAL(Product_Line__c,&apos;Internet&apos;))
  )
)</errorConditionFormula>
        <errorMessage>When selecting Promotional Quote, 1.  Payment Method must be Credit Card or ACH, 2. Payment schedule must be Monthly or Quarterly AND 3. Product Line must be Internet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateBillingContactEmail</fullName>
        <active>true</active>
        <description>Validate that the selected Billing Contact has an email address (SF-2388)</description>
        <errorConditionFormula>NOT(ISBLANK(zqu__BillToContact__c)) &amp;&amp; ISBLANK(zqu__BillToContact__r.Email)</errorConditionFormula>
        <errorDisplayField>zqu__Account__c</errorDisplayField>
        <errorMessage>The Billing Contact must have an email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateBillingContactMailingAddress</fullName>
        <active>true</active>
        <description>Validate that the selected Billing Contact has a mailing address (SF-2388)</description>
        <errorConditionFormula>NOT(ISBLANK(zqu__BillToContact__c)) &amp;&amp; ( 
ISBLANK(zqu__BillToContact__r.MailingStreet) || ISBLANK(zqu__BillToContact__r.MailingCity) || 
ISBLANK(zqu__BillToContact__r.MailingState) || 
ISBLANK(zqu__BillToContact__r.MailingPostalCode))</errorConditionFormula>
        <errorDisplayField>zqu__Account__c</errorDisplayField>
        <errorMessage>The Billing Contact must have a complete mailing address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateBillingContactPhoneNumber</fullName>
        <active>true</active>
        <description>Validate that the selected Billing Contact has a 10-digit phone number (SF-2388); Salesforce formats phone numbers like &quot;(916) 983-1754&quot;, so check to see if the text has 14 characters</description>
        <errorConditionFormula>NOT(ISBLANK(zqu__BillToContact__c)) &amp;&amp; NOT(REGEX(zqu__BillToContact__r.Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>zqu__Account__c</errorDisplayField>
        <errorMessage>The Billing Contact must have a 10-digit phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateQuoteStartDateForPrint</fullName>
        <active>true</active>
        <description>For print product, the term start date is not allowed to select as 28th to 31st. CSP-3039</description>
        <errorConditionFormula>IF(
  AND(
    $Profile.Name&lt;&gt;&apos;System Administrator&apos;,
    zqu__Account__r.RecordType.Name == &apos;Local&apos;, 
    zqu__Opportunity__r.RecordType.Name == &apos;Local&apos;, 
    ISPICKVAL(Product_Line__c, &apos;Print&apos;),
    OR(
      DAY(zqu__TermStartDate__c)=28,
      DAY(zqu__TermStartDate__c)=29,
      DAY(zqu__TermStartDate__c)=30,
      DAY(zqu__TermStartDate__c)=31
      )
), true, false)</errorConditionFormula>
        <errorMessage>For print product, the term start date is not allowed to select as 28th to 31st</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateCustomerAcceptanceDate</fullName>
        <active>true</active>
        <description>Validate whether Customer Acceptance Date is equal or after Service Activation Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (   zqu__Customer_Acceptance_Date__c   ) ),
       OR
           (
             zqu__Customer_Acceptance_Date__c &lt;   zqu__Service_Activation_Date__c,
             zqu__Customer_Acceptance_Date__c &lt;    zqu__StartDate__c
           )
     )</errorConditionFormula>
        <errorDisplayField>zqu__Customer_Acceptance_Date__c</errorDisplayField>
        <errorMessage>Customer Acceptance Date cannot be before Service Activation Date or Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateServiceActivationDate</fullName>
        <active>true</active>
        <description>Validate whether Service Activation Date is equal or after Start Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (  zqu__Service_Activation_Date__c  ) ),
       zqu__Service_Activation_Date__c &lt;  zqu__StartDate__c
     )</errorConditionFormula>
        <errorDisplayField>zqu__Service_Activation_Date__c</errorDisplayField>
        <errorMessage>Service Activation Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateSubscriptionTermedType</fullName>
        <active>true</active>
        <description>[Deprecated]</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>zqu__Subscription_Term_Type__c</errorDisplayField>
        <errorMessage>[Deprecated]</errorMessage>
    </validationRules>
</CustomObject>